plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.project'
version = '0.0.1-SNAPSHOT'
description = 'urp'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.assertj:assertj-core'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testRuntimeOnly 'com.h2database:h2'
}

tasks.named('test') {
    useJUnitPlatform()
}

// ---------------------------------------------------------------------------
// Frontend integration
// ---------------------------------------------------------------------------
// The Vite-built React SPA in `frontend/` is copied into Spring Boot's
// classpath static resources at build time. Sync (not Copy) is used so legacy
// files in `src/main/resources/static/` are removed automatically when the
// frontend build no longer produces them (cutover-friendly per IMPL_SPEC §7.14).
//
// Toolchain note: pnpm is invoked via `corepack pnpm@9.15.9` because the dev
// environment may not have a global pnpm binary; corepack ships with Node 18+.
// ---------------------------------------------------------------------------

def pnpmCommand = ['corepack', 'pnpm@9.15.9']
def frontendDir = file('frontend')

tasks.register('frontendInstall', Exec) {
    group = 'frontend'
    description = 'Install frontend dependencies via pnpm.'
    workingDir = frontendDir
    commandLine(*pnpmCommand, 'install', '--frozen-lockfile')
    inputs.file(file('frontend/package.json'))
    inputs.file(file('frontend/pnpm-lock.yaml'))
    // Sentinel file instead of the entire node_modules tree — walking
    // node_modules for input snapshotting is slow and noisy.
    outputs.file(file('frontend/node_modules/.modules.yaml'))
}

tasks.register('frontendBuild', Exec) {
    group = 'frontend'
    description = 'Build the frontend SPA (vite build).'
    dependsOn 'frontendInstall'
    workingDir = frontendDir
    commandLine(*pnpmCommand, 'build')
    inputs.dir(file('frontend/src'))
    inputs.file(file('frontend/index.html'))
    inputs.file(file('frontend/vite.config.ts'))
    inputs.file(file('frontend/tsconfig.json'))
    inputs.file(file('frontend/tsconfig.node.json'))
    inputs.file(file('frontend/package.json'))
    outputs.dir(file('frontend/dist'))
}

tasks.register('frontendSync', Sync) {
    group = 'frontend'
    description = 'Copy frontend dist into Spring Boot static resources (Sync removes stale files).'
    dependsOn 'frontendBuild'
    from(file('frontend/dist'))
    into(file('src/main/resources/static'))
}

// Gate the heavy frontend rebuild behind a Gradle property so backend-only
// iteration (e.g. `./gradlew test -PskipFrontend`) is fast. CI builds and
// `bootJar` MUST NOT pass the property — they need the static bundle.
if (!project.hasProperty('skipFrontend')) {
    processResources.dependsOn 'frontendSync'
}
